--- a/packaging/Makefile
+++ b/packaging/Makefile
@@ -35,6 +35,7 @@ all: packages
 
 .PHONY: packages package-deb \
 	package-rpm package-rpm-fedora package-rpm-suse \
+	package-rpm-rhel6 package-rpm-rhel7 \
 	package-windows package-standalone-macosx \
 	package-generic-unix
 
@@ -70,11 +71,17 @@ packages: package-deb package-rpm package-windows package-generic-unix
 package-deb: $(SOURCE_DIST_FILE)
 	$(gen_verbose) $(MAKE) -C debs/Debian $(VARS) all $(DO_CLEAN)
 
-package-rpm: package-rpm-fedora package-rpm-suse
+package-rpm: package-rpm-rhel6 package-rpm-rhel7 package-rpm-suse
 	@:
 
 package-rpm-fedora: $(SOURCE_DIST_FILE)
 	$(gen_verbose) $(MAKE) -C RPMS/Fedora $(VARS) all $(DO_CLEAN)
+
+package-rpm-rhel6: $(SOURCE_DIST_FILE)
+	$(gen_verbose) $(MAKE) -C RPMS/Fedora $(VARS) RPM_OS=rhel6 all $(DO_CLEAN)
+
+package-rpm-rhel7: $(SOURCE_DIST_FILE)
+	$(gen_verbose) $(MAKE) -C RPMS/Fedora $(VARS) RPM_OS=rhel7 all $(DO_CLEAN)
 
 package-rpm-suse: $(SOURCE_DIST_FILE)
 	$(gen_verbose) $(MAKE) -C RPMS/Fedora $(VARS) RPM_OS=suse all $(DO_CLEAN)
